--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300;1,400&display=swap");
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: "Roboto", sans-serif;
 }
 body {
   display: flex;
@@ -127,10 +129,15 @@ body {
   font-size: 0.75em;
   color: #8f8f8f;
   text-decoration: none;
+  transition: color 0.8s ease;
+  letter-spacing: 1px;
 }
 .links a:hover,
 .links a:nth-child(2) {
   color: hsl(43deg, 100%, 61%);
+}
+.links a:nth-child(2):hover {
+  color: hsl(43deg, 100%, 81%);
 }
 input[type="submit"] {
   border: none;
@@ -142,6 +149,10 @@ input[type="submit"] {
   border-radius: 4px;
   font-weight: 600;
   cursor: pointer;
+  transition: background-color 0.8s ease;
+}
+input[type="submit"]:hover {
+  background: hsl(43deg, 100%, 51%);
 }
 input[type="submit"]:active {
   background: hsl(43deg, 100%, 71%);
